syntax = "proto3";
package factset.protobuf.stach;

option csharp_namespace = "FactSet.Protobuf.Stach";
option java_package = "com.factset.protobuf.stach";
option java_outer_classname = "PackageProto";


import "fds/protobuf/stach/table/Table.proto";

message Package {
  string version = 1;
  repeated string primary_table_ids = 2;
  map<string, factset.protobuf.stach.table.Table> tables = 3;
}